loanDepot Careers - Principal DevOps Engineer. Zeta Global Careers - DevOps Engineer. Zeta Global Careers - DevOps Engineer.     0723 - Sr DevOps Engineer at Workforce Source .     0722 - Sr DevOps Engineer at Workforce Source . Guidewire Software, Inc. Careers - Cloud DevOps Manager - Exton, PA. MORI Associates, Inc. Careers - Linux Systems Administrator - DevOps - Nasa/JPL. Lifesize, Inc. Careers - DevOps Engineer. Arcadia Power - Jobs: Senior DevOps Engineer - Apply online. DevOps Senior Analyst - Careers at WMP Careers.       IT-Admin / DevOps-Engineer (w/m/d) - INVERS     . Job Application for DevOps Engineer at ReCharge Payments. RecruiterDNA | DevOpsDNA - Job Page. RecruiterDNA | DevOpsDNA - Job Page. Sr. DevOps Engineer | RecruiterDNA | DevOpsDNA - Job Page. Conga Senior DevOps Engineer | SmartRecruiters. Best Western Hotels & Resorts Senior IT Engineer - DevOps | SmartRecruiters. Senior Devops Engineer - h2o.ai - Career Page. Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance). Co-op Software Engineer - DevOps - Nokia Careers. Yapily Ltd DevOps Engineer | SmartRecruiters. Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN. Linux DevOps / WebOps Engineer - RubensteinTech - Career Page. Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN. Job @ talpasolutions (Essen): DevOps Programmer (L... | JOIN. Job Application for Senior DevOps Engineer at Cityblock Health. Devops Engineer - Living Goods - Career Page. Avant - Senior Software Engineer, DevOps (Remote Ok). GBM DevOps Lead | SmartRecruiters. iPresence - Jobs: DevOps Engineer, UK REMOTE - Apply online. Senior DevOps Engineer #503444 UK-Leeds. Loanpal Careers - DevOps Engineer. Checkout.com - DevOps Engineer. Curriculum Associates Careers - Senior DevOps Engineer. Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance). DevOps and AWS Infrastructure Engineer - Apply ... - Thematic - Jobs. eHealth Careers - 

--- a/devops.html
+++ b/devops.html
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Conga1/743999692325058-senior-devops-engineer'>Conga Senior DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Conga1/743999692325058-senior-devops-engineer'>Conga Senior DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -124,7 +124,7 @@
 <p><span class="badge badge-light">Ottawa, Ontario</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/YapilyLtd/743999692372874-devops-engineer'>Yapily Ltd DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/YapilyLtd/743999692372874-devops-engineer'>Yapily Ltd DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -132,7 +132,7 @@
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://rubensteintech.applytojob.com/apply/i99mViLD4X/Linux-DevOps-WebOps-Engineer'>Linux DevOps / WebOps Engineer - RubensteinTech - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rubensteintech.applytojob.com/apply/i99mViLD4X/Linux-DevOps-WebOps-Engineer'>Linux DevOps / WebOps Engineer - RubensteinTech - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Our services division, RubensteinTech, is seeking an experienced developer 
 excited by our goal of infrastructure as code to work closely with our product and
@@ -181,7 +181,7 @@ be working as part of a team based in Leeds and help build the infrastructure?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=orT09fwd&__jvst=Employee+Referral&__jvsd=sAVBYiwR&__jvsc=Twitter&bid=nbmOVLww'>Curriculum Associates Careers - Senior DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=orT09fwd&__jvst=Employee+Referral&__jvsd=sAVBYiwR&__jvsc=Twitter&bid=nbmOVLww'>Curriculum Associates Careers - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -303,7 +303,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
+<h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
